--- a/index.html
+++ b/index.html
@@ -192,13 +192,15 @@
                         </tr>
                         <tr>
                             <td>
-                                <a href="#" class="add-submit-khoa btn-edit" id="add-khoa-btn">Thêm</a>
+                                <input type="submit" href="#" class="add-submit-khoa btn-edit" id="add-khoa-btn"
+                                    value="Thêm"></input>
                             </td>
                             <td>
                                 <input type="reset" value="Hủy" class="btn-submit btn-edit-khoa">
                             </td>
                             <td>
-                                <a href="#" class="btn-edit edit-khoa-btn " id="edit-btn">Sửa</a>
+                                <input type="submit" value="Sửa" href="#" class="btn-edit edit-khoa-btn "
+                                    id="edit-btn"></input>
                             </td>
                         </tr>
                     </table>
@@ -208,6 +210,11 @@
         </div>
 
     </div>
+
+
+
+
+
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
